<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuOptions"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_options"/>
<!--      android:actionViewClass="android.widget.SearchView" -->
    <item
        android:id="@+id/menu_search"
       
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/menu_search"/>
    <!-- <item -->
    <!-- android:id="@+id/menuSearch" -->
    <!-- android:icon="@android:drawable/ic_menu_search" -->
    <!-- android:title="@string/menu_search"/> -->
    <item
        android:id="@+id/menuMap"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/menu_map"/>
    <item
        android:id="@+id/menuQuit"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_quit"/>

</menu>