<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/eu.ttbox.velib"
    android:id="@+id/help_station_page1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:orientation="vertical" >

        <TextView
            style="@style/help_text"
            android:text="@string/help_station_circle_color_code" />

        <eu.ttbox.velib.ui.help.wrapper.StationDispoHelpView 
            style="@style/help_station_dispo"
            app:station_cycles="14"
            app:station_parking="27" >
        </eu.ttbox.velib.ui.help.wrapper.StationDispoHelpView>

        <eu.ttbox.velib.ui.help.wrapper.StationDispoHelpView 
            style="@style/help_station_dispo"
            app:station_cycles="0"
            app:station_parking="0" >
        </eu.ttbox.velib.ui.help.wrapper.StationDispoHelpView>

        <TextView
            style="@style/help_text"
            android:text="@string/help_station_circle_color_unexpected" />

        <eu.ttbox.velib.ui.help.wrapper.StationDispoHelpView 
            style="@style/help_station_dispo"
            app:station_cycles="1"
            app:station_parking="1" >
        </eu.ttbox.velib.ui.help.wrapper.StationDispoHelpView>

       <TextView
            style="@style/help_text"
            android:text="@string/help_station_preson_expected_config" />
        
        
    </LinearLayout>

</ScrollView>